--- a/css/style.css
+++ b/css/style.css
@@ -240,7 +240,7 @@ nav ul li a {
 /*-----------------------------------------------------------------------------------*/
 
 #header {
-  background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url("../images/home-bg.jpg") repeat scroll center center / cover;
+  background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url("../images/home-bg.JPG") repeat scroll center center / cover;
   height: 100vh;
   width: 100%;
 }
