--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,4 @@
 
-/*
-  Theme Name: Folio
-  Theme URL: https://bootstrapmade.com/folio-bootstrap-portfolio-template/
-  Author: BootstrapMade.com
-  Author URL: https://bootstrapmade.com
-*/
-
-/*  General Styling
-/*-----------------------------------------------------------------------------------*/
 
 body {
   background: #ffffff;
@@ -181,7 +172,7 @@ nav {
   background: #fff;
   z-index: 1000;
   width: 100%;
-  padding: 20px;
+  padding: 16px;
   display: none;
   -webkit-box-shadow: 0px 2px 92px 0px rgba(0, 0, 0, 0.18);
   -moz-box-shadow: 0px 2px 92px 0px rgba(0, 0, 0, 0.18);
@@ -199,7 +190,7 @@ nav ul li {
   float: left;
   margin-right: 15px;
   font-family: 'Poppins', sans-serif;
-  font-size: 14px;
+  font-size: 16px;
   margin-left: 40px;
 }
 
@@ -207,7 +198,7 @@ nav ul li a {
   padding: 2px 0 0 0;
   position: relative;
   display: block;
-  font-size: 14px;
+  font-size: 16px;
   color: #999999;
   font-family: 'Poppins', helvetica;
   font-weight: 500;
@@ -223,7 +214,7 @@ nav ul li a {
 
 .logo img {
   width: 100px;
-  height: 50px;
+  height: 100%;
 }
 
 .responsive {
@@ -284,7 +275,7 @@ nav ul li a {
 }
 
 /*-----------------------------------------------------------------------------------*/
-/*  Aout-us
+/*  About-us
 /*-----------------------------------------------------------------------------------*/
 
 #about {
@@ -386,6 +377,11 @@ nav ul li a {
   display: none;
 }
 
+
+.edu {
+  margin-left: 60px;
+  margin-right: 60px;
+}
 
 /*-----------------------------------------------------------------------------------*/
 /*  Portfolio
