--- a/css/blog.css
+++ b/css/blog.css
@@ -36,6 +36,11 @@
   width: 100%;
 }
 
+.img-responsive{
+  height: 100%;
+  width: 100%;
+}
+
 .journal-txt h4 a {
   display: block;
   font-size: 19px;
